--- a/uftasks/uftasks-component/uftasks-component-api/pom.xml
+++ b/uftasks/uftasks-component/uftasks-component-api/pom.xml
@@ -18,6 +18,11 @@
       <groupId>org.jboss.errai</groupId>
       <artifactId>errai-bus</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-user</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
 </project>
